Copy changes from union bot and code cleanup